@startuml
entity "userlevel" as userlevel {
  userlevelid : SERIAL
  levelname : VARCHAR(50)
  leveldescription : VARCHAR(255)
}

entity "roomdetail" as roomdetail {
  roomdetailid : SERIAL
  information : VARCHAR(255)
  terms : VARCHAR(255)
  bedrooms : INTEGER
  squaremeters : VARCHAR(50)
  oceanviewbalcony : BOOLEAN
  balconyoverlookingpool : BOOLEAN
}

entity "roomtype" as roomtype {
  roomtypeid : SERIAL
  roomtypename : VARCHAR(50)
  roomtypedescription : VARCHAR(255)
}

entity "stateroom" as stateroom {
  stateroomid : SERIAL
  stateroomname : VARCHAR(50)
}

entity "room" as room {
  roomid : SERIAL
  roomtypeid : INTEGER
  stateroomid : INTEGER
  roomdetailid : INTEGER
  roomname : VARCHAR(50)
  roomnumber : VARCHAR(50)
  image : VARCHAR(255)
  capacity : INTEGER
}

entity "offertype" as offertype {
  offertypeid : SERIAL
  offertypename : VARCHAR(50)
  offertypedescription : VARCHAR(255)
}

entity "roomoffer" as roomoffer {
  roomofferid : SERIAL
  roomid : INTEGER
  offertypeid : INTEGER
  cost : DECIMAL
  offertimeinit : TIMESTAMP
  offertimeend : TIMESTAMP
  offername : VARCHAR(50)
  riberapoints : INTEGER
  inresortpoints : INTEGER
  points : INTEGER
}

entity "bookingstate" as bookingstate {
  bookingstateid : SERIAL
  bookingstatename : VARCHAR(50)
}

entity "comforttype" as comforttype {
  comforttypeid : SERIAL
  comforttypename : VARCHAR(50)
  comforttypedescription : VARCHAR(255)
  active : BOOLEAN
}

entity "paymentmethod" as paymentmethod {
  paymentmethodid : SERIAL
  description : VARCHAR(255)
  state : VARCHAR(50)
}

entity "paymentstate" as paymentstate {
  paymentstateid : SERIAL
  paymentstatename : VARCHAR(50)
}

entity "registertype" as registertype {
  registertypeid : SERIAL
  registertypename : VARCHAR(50)
}

entity "useradmin" as useradmin {
  useradminid : SERIAL
  email : VARCHAR(255)
  password : VARCHAR(255)
  username : VARCHAR(50)
  firstname : VARCHAR(50)
  lastname : VARCHAR(50)
  phone : VARCHAR(50)
  address : VARCHAR(255)
  typedocument : VARCHAR(50)
  document : VARCHAR(50)
  role : VARCHAR(50)
  status : VARCHAR(50)
  permission : VARCHAR(50)
  createdat : TIMESTAMP
  createdid : INTEGER
  updatedat : TIMESTAMP
  updatedid : INTEGER
}

entity "userclient" as userclient {
  userclientid : SERIAL
  registertypeid : INTEGER
  userlevelid : INTEGER
  countryid : INTEGER
  genderid : INTEGER
  areazoneid : INTEGER
  codeuser : INTEGER
  firstname : VARCHAR(50)
  lastname : VARCHAR(50)
  nationalityid : INTEGER
  documenttypeid : INTEGER
  documentnumber : VARCHAR(50)
  birthdate : TIMESTAMP
  role : INTEGER
  civilstatus : VARCHAR(50)
  city : VARCHAR(50)
  address : VARCHAR(255)
  cellnumber : VARCHAR(20)
  email : VARCHAR(255)
  password : VARCHAR(255)
  googleauth : VARCHAR(255)
  googleid : VARCHAR(255)
  googleemail : VARCHAR(255)
  username : VARCHAR(50)
  status : VARCHAR(50)
}

entity "booking" as booking {
  bookingid : SERIAL
  roomofferid : INTEGER
  bookingstateid : INTEGER
  userclientid : INTEGER
  costfinal : DECIMAL
  detail : VARCHAR(255)
  daybookinginit : TIMESTAMP
  daybookingend : TIMESTAMP
  checkin : TIMESTAMP
  checkout : TIMESTAMP
  createdat : TIMESTAMP
}

entity "comfortbookingdetail" as comfortbookingdetail {
  bookingid : INTEGER
  comforttypeid : INTEGER
}

entity "finalcostumer" as finalcostumer {
  finalcostumerid : SERIAL
  bookingid : INTEGER
  documenttype : VARCHAR(50)
  documentnumber : VARCHAR(50)
  firstname : VARCHAR(50)
  lastname : VARCHAR(50)
  yearold : INTEGER
}

entity "partnerpoints" as partnerpoints {
  partnerpointid : SERIAL
  userclientid : INTEGER
  points : INTEGER
}

entity "bookingincidents" as bookingincidents {
  roomincidentsid : SERIAL
  bookingid : INTEGER
  useradminid : INTEGER
  evidenceimage : VARCHAR(255)
  description : VARCHAR(255)
  observation : VARCHAR(255)
  actionstake : VARCHAR(255)
  createdat : TIMESTAMP
  createdid : INTEGER
}

entity "refusereason" as refusereason {
  refusereasonid : SERIAL
  refusereasonname : VARCHAR(255)
}

entity "currencytype" as currencytype {
  currencytypeid : SERIAL
  currencytypename : VARCHAR(50)
  currencytypedescription : VARCHAR(255)
}

entity "paymentbook" as paymentbook {
  paymentbookid : SERIAL
  bookingid : INTEGER
  paymentmethodid : INTEGER
  paymentstateid : INTEGER
  currencytypeid : INTEGER
  amount : DECIMAL
  description : VARCHAR(255)
  paymentdate : TIMESTAMP
  operationcode : VARCHAR(50)
  note : VARCHAR(255)
  totalcost : DECIMAL
  imagevoucher : VARCHAR(255)
  totalpoints : INTEGER
  paymentcomplete : BOOLEAN
}

entity "refusepayment" as refusepayment {
  refusepaymentid : SERIAL
  paymentbookid : INTEGER
  refusereasonid : INTEGER
  detail : VARCHAR(255)
}

entity "comfortroomofferdetail" as comfortroomofferdetail {
  roomofferid : INTEGER
  comforttypeid : INTEGER
}

entity "bedstype" as bedstype {
  bedtypeid : SERIAL
  bedtypename : VARCHAR(50)
  bedtypedescription : VARCHAR(255)
}

entity "bedroom" as bedroom {
  bedroomid : SERIAL
  roomid : INTEGER
  bedtypeid : INTEGER
  quantity : INTEGER
}

entity "solicitude" as solicitude {
  solicitudeid : SERIAL
  email : VARCHAR(255)
  phone : VARCHAR(50)
  message : VARCHAR(255)
  codesend : VARCHAR(50)
  status : VARCHAR(50)
  type : VARCHAR(50)
  createdid : INTEGER
  createdat : TIMESTAMP
  responseid : INTEGER
  responseat : TIMESTAMP
}

entity "service" as service {
  serviceid : SERIAL
  servicedesc : VARCHAR(255)
}

entity "pointstype" as pointstype {
  pointstypeid : SERIAL
  pointstypedesc : VARCHAR(255)
}

entity "exchangetype" as exchangetype {
  exchangetypeid : SERIAL
  exchangetypedesc : VARCHAR(255)
}

entity "requesttype" as requesttype {
  requesttypeid : SERIAL
  requesttypedesc : VARCHAR(255)
}

entity "sendandreceive" as sendandreceive {
  sendandreceiveid : SERIAL
  sendandreceivedesc : VARCHAR(255)
}

entity "pointstransfers" as pointstransfers {
  pointstransferid : SERIAL
  senderid : INTEGER
  requesttypeid : INTEGER
  datetransfer : TIMESTAMP
  receiverid : INTEGER
  pointstransfered : DOUBLE PRECISION
  pointstypeid : INTEGER
  sendandreceiveid : INTEGER
}

entity "pointsexchange" as pointsexchange {
  pointsexchangeid : SERIAL
  userclientid : INTEGER
  echangetypeid : INTEGER
  dateuse : TIMESTAMP
  exchangecode : VARCHAR(255)
  serviceid : INTEGER
  description : VARCHAR(255)
  checkin : TIMESTAMP
  checkout : TIMESTAMP
  nights : INTEGER
  pointsquantity : DOUBLE PRECISION
  pointsused : DOUBLE PRECISION
  pointstypeid : INTEGER
  bookingid : INTEGER
}

entity "country" as country {
  countryid : SERIAL
  countrydesc : VARCHAR(255)
}

entity "gender" as gender {
  genderid : SERIAL
  genderdesc : VARCHAR(255)
}

entity "areazone" as areazone {
  areazoneid : SERIAL
  areazonedesc : VARCHAR(255)
}

entity "nationality" as nationality {
  nationalityid : SERIAL
  nationalitydesc : VARCHAR(255)
}

entity "documenttype" as documenttype {
  documenttypeid : SERIAL
  documenttypedesc : VARCHAR(255)
}

userlevel ||..|| userclient : userlevelid
roomdetail ||..|| room : roomdetailid
roomtype ||..|| room : roomtypeid
stateroom ||..|| room : stateroomid
offertype ||..|| roomoffer : offertypeid
room ||..|| roomoffer : roomid
bookingstate ||..|| booking : bookingstateid
comforttype ||..|| comfortbookingdetail : comforttypeid
paymentmethod ||..|| paymentbook : paymentmethodid
paymentstate ||..|| paymentbook : paymentstateid
registertype ||..|| userclient : registertypeid
useradmin ||..|| bookingincidents : useradminid
userclient ||..|| booking : userclientid
booking ||..|| comfortbookingdetail : bookingid
booking ||..|| finalcostumer : bookingid
userclient ||..|| partnerpoints : userclientid
booking ||..|| bookingincidents : bookingid
refusereason ||..|| refusepayment : refusereasonid
currencytype ||..|| paymentbook : currencytypeid
roomoffer ||..|| comfortroomofferdetail : roomofferid
comforttype ||..|| comfortroomofferdetail : comforttypeid
bedstype ||..|| bedroom : bedtypeid
room ||..|| bedroom : roomid
useradmin ||..|| solicitude : createdid
userclient ||..|| solicitude : responseid
service ||..|| pointsexchange : serviceid
pointstype ||..|| pointstransfers : pointstypeid
exchangetype ||..|| pointsexchange : echangetypeid
requesttype ||..|| pointstransfers : requesttypeid
sendandreceive ||..|| pointstransfers : sendandreceiveid
booking ||..|| pointsexchange : bookingid
@enduml